--- a/Aap.NetBD/Aap.NetBD/Aap.NetBD.csproj
+++ b/Aap.NetBD/Aap.NetBD/Aap.NetBD.csproj
@@ -92,6 +92,7 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Detalhes.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Img\bd.png" />
     <Content Include="Inserir.aspx" />
@@ -210,6 +211,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Conexao.cs" />
+    <Compile Include="Detalhes.aspx.cs">
+      <DependentUpon>Detalhes.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Detalhes.aspx.designer.cs">
+      <DependentUpon>Detalhes.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
