--- a/Aap.NetBD/Aap.NetBD/Aap.NetBD.csproj
+++ b/Aap.NetBD/Aap.NetBD/Aap.NetBD.csproj
@@ -98,6 +98,7 @@
     <Content Include="Img\bd.png" />
     <Content Include="Inserir.aspx" />
     <Content Include="Listar.aspx" />
+    <Content Include="Remover.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -251,6 +252,13 @@
       <DependentUpon>Master.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Remover.aspx.cs">
+      <DependentUpon>Remover.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Remover.aspx.designer.cs">
+      <DependentUpon>Remover.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Teste.aspx.cs">
       <DependentUpon>Teste.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
